test/fail/M0128.mo
//MOC-FLAG -A=M0194
actor {
  func preupgrade(foo : Bool) {}
}
